# daiei-backend

./: .env.sample  .gitignore  Pipfile  Untitled-1.ipynb  ecosystem.config.js  nodemon.config.fastapi.json  package.json  pyproject.toml  readme.md
csv/: __filenames__.txt  readme.md
src/: fastapi_server.py  main.py  settings.py  utils.py
src/models/: buka.py  gzaikozan.py  hinsyu.py  kaisaki.py  table_describe.py  tran.py  urisaki.py  urisaki2.py
test/: test.csv
utilities/: common.py
